@@ -11,5 +11,6 @@ $foo = new Foo();
 --EXPECTF--
 Fatal error: Uncaught Error: Class "BAR" not found in %s:%d
 Stack trace:
-#0 {main}
+#0 %s(%d): [constant expression]()
+#1 {main}
   thrown in %s on line %d
